--- a/views/index.html
+++ b/views/index.html
@@ -44,8 +44,7 @@
     </p>
 
     <h3>Insuranse agents</h3>
-    <ul id="agents-list">
-    </ul>
+    <ul id="agents-list"></ul>
   </div>
 
   <script type="text/javascript" src="/js/api.js"></script>
